prevent overlapping of zoom and popup-close buttons at small screens - fixes #8

--- a/styles/less/style.less
+++ b/styles/less/style.less
@@ -330,5 +330,8 @@ MEDIA
     #backtotop {
       display:block;
     }
+    .leaflet-top { /* to prevent overlapping with popup-close button */
+      top:40px;
+    }
 }
 
